--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,12 +1,5 @@
 {{#each beersFromApi}}
-<div class="infoCervezas">
-    <img src={{this.image_url}} class="beer"/>
-    <div class="info">
-        <p>
-            <h3>{{this.name}}</h3>
-            <p class="light">{{this.tagline}}</p>
-        </p>
-        <p>{{this.description}}</p>
-    </div>
+<div >
+    {{> beerpartial }}
 </div>
 {{/each}}
