--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
     <body>
         <nav>
             <ul>
-                <li><a href=""> Home</a></li>
+                <li><a href="./"> Home</a></li>
                 <li><a href="/beers"> Beers</a></li>
                 <li><a href="/random-beer"> Random Beer</a></li>
             </ul>
